src/test/ui/borrowck/borrowck-use-uninitialized-in-cast-trait.stderr
error[E0381]: binding `*x` isn't initialized
  --> $DIR/borrowck-use-uninitialized-in-cast-trait.rs:9:13
   |
LL |     let x: &i32;
   |         - variable declared here
LL |     let y = x as *const dyn Foo;
   |             ^ `*x` borrowed here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
